--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,36 @@
+appnope==0.1.0
+aspy.yaml==1.0.0
+backports.shutil-get-terminal-size==1.0.0
+cached-property==1.3.1
+decorator==4.1.2
 Django==1.11.2
 django-appconf==1.0.2
 django-compressor==2.1.1
 django-hmin==0.3.3
 django-settings-export==1.2.1
+enum34==1.1.6
+identify==1.0.7
+ipython==5.5.0
+ipython-genutils==0.2.0
+nodeenv==1.2.0
+olefile==0.44
+pathlib2==2.3.0
+pexpect==4.3.0
+pickleshare==0.7.4
+Pillow==4.3.0
+pre-commit==1.4.1
+prompt-toolkit==1.0.15
 psycopg2==2.7.1
+ptyprocess==0.5.2
+Pygments==2.2.0
 pytz==2017.2
+PyYAML==3.12
 rcssmin==1.0.6
 rjsmin==1.0.12
+scandir==1.6
+simplegeneric==0.8.1
+six==1.11.0
+traitlets==4.3.2
+virtualenv==15.1.0
+wcwidth==0.1.7
 xxhash==1.0.1
