--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,4 @@ repos:
     -   id: debug-statements
     -   id: flake8
         args: [--max-line-length=120, --ignore=W503]
+        exclude: (tests/.*|.*/migrations/.*\.py)$
